# app/Model/User/User.php
@@ -6,54 +6,9 @@ use AlpogoApi\Model\Artist;
 use Illuminate\Notifications\Notifiable;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 
-/**
- * @SWG\Definition(required={"first_name", "last_name", "email", "passport", "birthday"}, type="object", @SWG\Xml(name="User"))
- */
 class User extends Authenticatable
 {
     use Notifiable;
-
-    /**
-     * @SWG\Property()
-     * @var string
-     */
-    public $first_name;
-
-    /**
-     * @SWG\Property()
-     * @var string
-     */
-    public $last_name;
-
-    /**
-     * @SWG\Property()
-     * @var string
-     */
-    public $email;
-
-    /**
-     * @SWG\Property()
-     * @var string
-     */
-    public $passport;
-
-    /**
-     * @SWG\Property()
-     * @var string
-     */
-    public $birthday;
-
-    /**
-     * @SWG\Property()
-     * @var string
-     */
-    public $password;
-
-    /**
-     * @SWG\Property()
-     * @var string
-     */
-    public $password_confirmation;
 
     /**
      * The attributes that are mass assignable.
